vendor/charmed_rust/crates/bubbletea-macros/tests/ui/fail/tuple_struct_not_supported.stderr
error: #[derive(Model)] can only be applied to a named struct with fields, found tuple struct

       help: Apply #[derive(Model)] to a named struct with fields instead.
  --> tests/ui/fail/tuple_struct_not_supported.rs:17:8
   |
17 | struct TupleStruct(i32, String);
   |        ^^^^^^^^^^^
